--- a/app/src/main/res/drawable/background_buttonsos_ripple.xml
+++ b/app/src/main/res/drawable/background_buttonsos_ripple.xml
@@ -2,10 +2,11 @@
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
     android:color="?android:attr/colorControlHighlight">
     <item android:id="@android:id/mask">
-        <shape android:shape="rectangle">
+        <shape android:shape="oval">
             <solid android:color="#000000"></solid>
-            <corners android:radius="100dp"></corners>
         </shape>
     </item>
+
+
     <item android:drawable="@drawable/background_buttonsos"></item>
 </ripple>
