--- a/app/src/main/res/layout/activity_qa_contacts.xml
+++ b/app/src/main/res/layout/activity_qa_contacts.xml
@@ -45,7 +45,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="40dp"
                         android:layout_centerInParent="true"
-                        android:src="@drawable/menu" />
+                        android:src="@drawable/menu"
+                        app:tint="@color/textColor_WithoutBg" />
                 </RelativeLayout>
 
 
@@ -98,8 +99,8 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
-        app:fab_colorNormal="@color/FloatingButton"
-        app:fab_colorPressed="@color/PressFloatingButton"
+        app:fab_colorNormal="@color/backgroundBtn_conatct"
+        app:fab_colorPressed="@color/backgroundBtn_conatct_under"
         app:fab_icon="@drawable/icon_add_user"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
