--- a/app/src/main/res/layout/activity_qa_panic_button.xml
+++ b/app/src/main/res/layout/activity_qa_panic_button.xml
@@ -24,20 +24,39 @@
             android:background="@drawable/style_toolbar"
             android:orientation="horizontal">
 
-            <ImageButton
+
+
+            <RelativeLayout
                 android:id="@+id/Menu_activityQaMap"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="10dp"
                 android:layout_weight="0"
-                android:layout_marginStart="5dp"
-                android:src="@drawable/menu" />
+                android:clickable="true"
+                android:background="?attr/selectableItemBackgroundBorderless">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_centerInParent="true"
+                    android:src="@drawable/menu"
+                    app:tint="@color/textColor_WithoutBg"/>
+            </RelativeLayout>
 
             <TextView
                 android:id="@+id/textView5"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:layout_gravity="center"
+                android:layout_marginEnd="60dp"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:textColor="@color/textColor_WithoutBg"
+                android:textSize="20dp"
                 android:text="@string/option_panicbuttom" />
+
+
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
@@ -57,6 +76,7 @@
                 android:layout_width="250dp"
                 android:layout_height="5dp"
                 android:layout_gravity="center"
+                android:outlineAmbientShadowColor="@color/textColor_WithoutBg"
                 android:background="@drawable/separator"/>
 
             <TextView
@@ -71,13 +91,13 @@
 
             <RelativeLayout
                 android:id="@+id/imageButton2"
-                android:layout_width="250dp"
-                android:layout_height="250dp"
+                android:layout_width="300dp"
+                android:layout_height="300dp"
                 android:layout_gravity="center"
                 app:cardElevation="200dp"
                 android:clickable="true"
                 android:background="@drawable/background_buttonsos_ripple"
-                android:layout_margin="5dp">
+                android:layout_margin="10dp">
 
 
                 <com.airbnb.lottie.LottieAnimationView
@@ -121,6 +141,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif"
                 android:gravity="center"
+                android:textColor="@color/textColor_WithoutBg"
                 android:text="Usar únicamente en caso de emergencia"
                 android:textSize="20dp" />
         </LinearLayout>
